--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="main-content">
         <!-- Intro Section -->
         <div class="intro">
-            <h1>Jesvin</h1>
+            <h1>Bipan</h1>
             <p>A recent Bachelor of Cyber Security graduate from Deakin University with a strong foundation in networking, penetration testing, and offensive security. I have hands-on experience in Web Application and Active Directory penetration testing, gained through platforms like Hack The Box and TryHackMe, where I have explored various real-world attack vectors and security misconfigurations.
 
                 I am proficient in multiple programming languages, including Python, C++, and C#, which I leverage for automation, exploit development, and security tool creation. My passion for cybersecurity drives me to continuously expand my skill set through CTF challenges, research, and practical labs.
