--- a/index.html
+++ b/index.html
@@ -40,13 +40,8 @@
                 </div>
                 
         </div>
-        <!-- Lottie Animation -->
-        <dotlottie-player src="https://lottie.host/0b372dcc-ef60-47fd-9f9b-de35473d4200/6AwVc1a8Qg.lottie" 
-                         background="transparent" 
-                         speed="1" 
-                         loop 
-                         autoplay>
-        </dotlottie-player>
+        <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+        <dotlottie-player src="https://lottie.host/e53c8cab-3cbd-43dd-9b7c-4177ee9f3970/hqOxVCrudr.lottie" background="transparent" speed="1" style="width: 300px; height: 300px" loop autoplay></dotlottie-player>
     </div>
 
     <!-- Projects Section -->
