--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
     <!-- Certifications Section -->
     <section id="certifications" class="certifications">
         <h2>Certifications</h2>
+
+
+        <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+<dotlottie-player src="https://lottie.host/f6fc466e-b076-46d6-9b53-a9b13c33acfb/Uifxri0oJ9.lottie" background="transparent" speed="1" style="width: 300px; height: 300px" loop autoplay></dotlottie-player>
         <h3>CompTIA Security+</h3>
         <p>CompTIA Security+ validates my expertise in cybersecurity, covering risk management, threat detection, and security best practices. I gained hands-on knowledge in securing networks, implementing cryptographic solutions, and responding to incidents, ensuring compliance with industry standards.</p>
         <strong>Skills Learned:</strong>
