--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <li>Cryptography & PKI</li>
             <li>Incident Response & Forensics</li>
         </ol>
-        <h3>Certified Penetration Testing Specialist (In Progress)</h3>
+        <h3>Certified Penetration Testing Specialist CPTS (In Progress)</h3>
         <p>Currently working towards the CPTS certification to enhance my penetration testing skills. This certification focuses on ethical hacking, vulnerability assessment, and exploit development. It strengthens my ability to assess and secure networks, identify security flaws, and conduct red team exercises.</p>
         <strong>Skills Learned:</strong>
         <ol>
