--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section id="projects" class="projects">
         <h2>My Projects</h2>
         <h3>Personal Website</h3>
-        <p>I developed a personal website to showcase my portfolio and projects, focusing on creating a clean, responsive, and user-friendly design. Through this project, I enhanced my skills in HTML, CSS, and JavaScript
+        <p>I developed a personal website to showcase my portfolio and projects, focusing on creating a clean, responsive, and user-friendly design. Through this project, I enhanced my skills in not only HTML, but also CSS, and JavaScript
             Additionally, I learned how to structure content effectively, implement interactive elements, and ensure cross-browser compatibility. This project helped me understand the importance of UI/UX principles and reinforced my ability to create visually appealing and functional web applications.
         </p>
         <strong>Skills Learned:</strong>
